Update title and content of index.html
Signed-off-by: andi139 <akkoandi@gmail.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>nomoromosse - Beranda</title>
+  <title>PENGENDALI PERMAINAN - Beranda</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -69,4 +69,5 @@
     </div>
   </div>
 </body>
+
 </html>
