Update page title and header text
Signed-off-by: andi139 <akkoandi@gmail.com>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🏠 nomoromosse</h1>
+    <h1>🏠 PENGENDALI GAME</h1>
     <div class="features-grid">
       <a href="fitur1.html" class="feature-btn">data market</a>
       <a href="fitur2.html" class="feature-btn">rampa40</a>
@@ -71,3 +71,4 @@
 </body>
 
 </html>
+
