--- a/fitur11.html
+++ b/fitur11.html
@@ -19,14 +19,72 @@
       text-decoration: none;
       font-weight: bold;
     }
-    .back-btn:hover {
-      text-decoration: underline;
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
     }
-    .feature-label {
-      font-size: 1.5em;
-      font-weight: bold;
+    h2 {
+      text-align: center;
       color: #2c3e50;
-      margin-bottom: 20px;
+    }
+    .input-area {
+      text-align: center;
+      margin: 20px 0;
+    }
+    input {
+      padding: 8px;
+      width: 100px;
+      font-size: 16px;
+      text-align: center;
+      margin-right: 8px;
+    }
+    button {
+      padding: 8px 16px;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover { opacity: 0.9; }
+    .result {
+      margin-top: 20px;
+      background: white;
+      padding: 16px;
+      border-radius: 8px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    }
+    .kamar-box {
+      margin-top: 16px;
+      padding: 12px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+    }
+    .kamar-title {
+      font-weight: bold;
+      margin-bottom: 8px;
+      color: #2c3e50;
+    }
+    .angka {
+      word-break: break-all;
+      font-family: monospace;
+      margin: 8px 0;
+    }
+    .btn-salin {
+      background: #2196F3;
+      padding: 6px 12px;
+      font-size: 14px;
+    }
+    .action-buttons {
+      margin-top: 16px;
+      text-align: center;
+    }
+    .btn-delete {
+      background: #f44336;
+      margin-left: 8px;
+    }
+    .btn-edit {
+      background: #FF9800;
     }
     #status {
       text-align: center;
@@ -39,17 +97,31 @@
   </style>
 </head>
 <body>
-  <a href="index.html" class="back-btn">← Kembali ke Beranda</a>
-  <div class="feature-label">kelompok</div>
-  <div id="status">Menunggu aksi...</div>
+  <div class="container">
+    <a href="index.html" class="back-btn">← Kembali ke Beranda</a>
+    <h2>kelompok</h2>
+
+    <div class="input-area">
+      <input type="text" id="input2D" placeholder="Contoh: 12" maxlength="2" />
+      <button onclick="cariKelompok()">Cari</button>
+    </div>
+
+    <div id="status"></div>
+    <div id="hasil" class="result" style="display:none;"></div>
+
+    <div class="action-buttons">
+      <button class="btn-edit" onclick="editData()">Edit</button>
+      <button onclick="simpanData()">Simpan ke Firebase</button>
+      <button class="btn-delete" onclick="hapusData()">Hapus</button>
+    </div>
+  </div>
 
   <!-- Firebase SDK -->
   <script type="module">
-    // === IMPOR MODUL FIREBASE ===
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getDatabase, ref, set, get, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+    import { getDatabase, ref, set, remove, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-    // === KONFIGURASI FIREBASE — GANTI DENGAN NILAI DARI fitur1.html ANDA ===
+    // === KONFIGURASI FIREBASE ===
     const firebaseConfig = {
       apiKey: "AIzaSyALc-1SYjzRUcB-Ws01rab1mxlmcv2e6dA",
       authDomain: "nomoromosse.firebaseapp.com",
@@ -60,39 +132,136 @@
       appId: "1:985183830784:web:fae21bdb94c1f0103769e5"
     };
 
-    // Inisialisasi Firebase
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
 
-    // Contoh: baca data dari /fitur11 (opsional, untuk real-time)
-    const statusDiv = document.getElementById('status');
-    onValue(ref(database, 'fitur11'), (snapshot) => {
-      const data = snapshot.val();
-      if (data) {
-        // Anda bisa tampilkan data di sini nanti
-        statusDiv.textContent = "Data fitur11 dimuat secara real-time.";
-        statusDiv.className = "success";
-      }
-    });
-
-    // Fungsi contoh simpan (bisa dikembangkan)
-    window.simpanContoh = function() {
-      set(ref(database, 'fitur11/contoh'), {
-        waktu: Date.now(),
-        nilai: "data uji"
-      })
-      .then(() => {
-        statusDiv.textContent = "✅ Data tersimpan!";
-        statusDiv.className = "success";
-      })
-      .catch(err => {
-        statusDiv.textContent = "❌ Gagal: " + err.message;
-        statusDiv.className = "error";
-      });
+    // === TABEL PASANGAN KAMAR (diperbarui, anti-simetri) ===
+    const pasanganKamar = {
+      "00":[1,2],"11":[1,3],"22":[2,3],"33":[1,2],"44":[1,3],"55":[2,3],"66":[1,2],"77":[1,3],"88":[2,3],"99":[1,2],
+      "01":[1,2],"10":[2,3],"02":[1,3],"20":[1,2],"03":[2,3],"30":[1,3],"04":[1,2],"40":[1,3],"05":[2,3],"50":[1,2],
+      "06":[1,3],"60":[2,3],"07":[1,2],"70":[2,3],"08":[2,3],"80":[1,3],"09":[1,3],"90":[1,2],"12":[1,3],"21":[2,3],
+      "13":[2,3],"31":[1,2],"14":[1,2],"41":[2,3],"15":[1,3],"51":[1,2],"16":[2,3],"61":[1,3],"17":[1,2],"71":[1,3],
+      "18":[1,3],"81":[2,3],"19":[2,3],"91":[1,2],"23":[1,2],"32":[1,3],"24":[2,3],"42":[1,2],"25":[1,3],"52":[2,3],
+      "26":[1,2],"62":[1,3],"27":[2,3],"72":[1,2],"28":[1,3],"82":[2,3],"29":[1,2],"92":[1,3],"34":[2,3],"43":[1,2],
+      "35":[1,3],"53":[2,3],"36":[1,2],"63":[1,3],"37":[2,3],"73":[1,2],"38":[1,3],"83":[2,3],"39":[1,2],"93":[1,3],
+      "45":[2,3],"54":[1,3],"46":[1,2],"64":[2,3],"47":[1,3],"74":[1,2],"48":[2,3],"84":[1,3],"49":[1,2],"94":[2,3],
+      "56":[1,3],"65":[1,2],"57":[2,3],"75":[1,3],"58":[1,2],"85":[2,3],"59":[1,3],"95":[1,2],"67":[2,3],"76":[1,3],
+      "68":[1,2],"86":[1,3],"69":[1,3],"96":[2,3],"78":[2,3],"87":[1,2],"79":[1,3],"97":[2,3],"89":[1,2],"98":[1,3]
     };
-  </script>
 
-  <!-- Opsional: tombol uji simpan -->
-  <!-- <button onclick="simpanContoh()">Simpan Contoh ke Firebase</button> -->
+    // === PEMETAAN SHIO → KAMAR ===
+    const shioKeKamar = {
+      1: 1, 4: 1, 7: 1, 10: 1,
+      2: 2, 5: 2, 8: 2, 11: 2,
+      3: 3, 6: 3, 9: 3, 12: 3
+    };
+
+    // === GENERATE SEMUA 2D PER KAMAR ===
+    const kamar2D = { 1: [], 2: [], 3: [] };
+    for (let num = 0; num <= 99; num++) {
+      const duaDigit = String(num).padStart(2, '0');
+      const angka = num === 0 ? 0 : num;
+      const shio = (angka % 12 === 0) ? 12 : (angka % 12);
+      const kamar = shioKeKamar[shio];
+      kamar2D[kamar].push(duaDigit);
+    }
+
+    // === FUNGSI UTAMA ===
+    let currentData = null;
+    let currentKey = null;
+
+    function cariKelompok() {
+      const input = document.getElementById('input2D').value.trim();
+      if (!/^\d{2}$/.test(input)) {
+        showStatus("Masukkan 2 digit angka!", "error");
+        return;
+      }
+
+      if (!pasanganKamar[input]) {
+        showStatus("Angka tidak valid!", "error");
+        return;
+      }
+
+      const [k1, k2] = pasanganKamar[input];
+      const hasilDiv = document.getElementById('hasil');
+      hasilDiv.innerHTML = `
+        <div><strong>Pasangan Kamar: ${k1}, ${k2}</strong></div>
+        <div class="kamar-box">
+          <div class="kamar-title">Kamar ${k1}: shio ${k1 === 1 ? '1,4,7,10' : k1 === 2 ? '2,5,8,11' : '3,6,9,12'}</div>
+          <div class="angka" id="angka-kamar-${k1}">${kamar2D[k1].join('*')}</div>
+          <button class="btn-salin" onclick="salinTeks('angka-kamar-${k1}')">Salin</button>
+        </div>
+        <div class="kamar-box">
+          <div class="kamar-title">Kamar ${k2}: shio ${k2 === 1 ? '1,4,7,10' : k2 === 2 ? '2,5,8,11' : '3,6,9,12'}</div>
+          <div class="angka" id="angka-kamar-${k2}">${kamar2D[k2].join('*')}</div>
+          <button class="btn-salin" onclick="salinTeks('angka-kamar-${k2}')">Salin</button>
+        </div>
+      `;
+      hasilDiv.style.display = 'block';
+
+      currentData = {
+        input: input,
+        kamar: [k1, k2],
+        waktu: new Date().toISOString()
+      };
+      showStatus("Hasil siap disimpan.", "success");
+    }
+
+    function salinTeks(id) {
+      const text = document.getElementById(id).innerText;
+      navigator.clipboard.writeText(text).then(() => {
+        showStatus("Teks disalin!", "success");
+      }).catch(() => {
+        showStatus("Gagal menyalin.", "error");
+      });
+    }
+
+    function simpanData() {
+      if (!currentData) {
+        showStatus("Tidak ada data untuk disimpan!", "error");
+        return;
+      }
+      const newRef = ref(database, 'fitur11/' + Date.now());
+      currentKey = newRef.key;
+      set(newRef, currentData)
+        .then(() => {
+          showStatus("✅ Data tersimpan ke Firebase!", "success");
+        })
+        .catch(err => {
+          showStatus("❌ Gagal: " + err.message, "error");
+        });
+    }
+
+    function editData() {
+      if (!currentData) {
+        showStatus("Tidak ada data untuk diedit!", "error");
+        return;
+      }
+      document.getElementById('input2D').value = currentData.input;
+      showStatus("Edit input, lalu klik Simpan.", "success");
+    }
+
+    function hapusData() {
+      if (!currentKey) {
+        showStatus("Tidak ada data untuk dihapus!", "error");
+        return;
+      }
+      remove(ref(database, 'fitur11/' + currentKey))
+        .then(() => {
+          currentKey = null;
+          document.getElementById('hasil').style.display = 'none';
+          showStatus("Data dihapus.", "success");
+        })
+        .catch(err => {
+          showStatus("Gagal hapus: " + err.message, "error");
+        });
+    }
+
+    function showStatus(text, type) {
+      const statusDiv = document.getElementById('status');
+      statusDiv.textContent = text;
+      statusDiv.className = type;
+    }
+  </script>
 </body>
 </html>
